Config LSP and Rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,476 +1,13 @@
-# .rubocop.yml
+# The behavior of RuboCop can be controlled via the .rubocop.yml
+# configuration file. It makes it possible to enable/disable
+# certain cops (checks) and to alter their behavior if they accept
+# any parameters. The file can be placed either in your home
+# directory or in some project directory.
+#
+# RuboCop will start looking for the configuration file in the directory
+# where the inspected file is and continue its way up to the root directory.
+#
+# See https://docs.rubocop.org/rubocop/configuration
 
 inherit_gem:
   rubocop-shopify: rubocop.yml
-
-plugins:
-  - rubocop-sorbet
-  - rubocop-rspec
-  - rubocop-rspec_rails
-  - rubocop-rails
-  - rubocop-performance
-  - rubocop-capybara
-  - rubocop-factory_bot
-  - rubocop-thread_safety
-
-inherit_mode:
-  merge:
-    - Exclude
-    - Include
-
-AllCops:
-  NewCops: enable
-  TargetRubyVersion: 3.3
-  TargetRailsVersion: 8.0
-  DisplayCopNames: true
-  DisplayStyleGuide: true
-  ExtraDetails: true
-  ParserEngine: parser_prism
-  Exclude:
-    - "vendor/**/*"
-    - "node_modules/**/*"
-    - "tmp/**/*"
-    - "log/**/*"
-    - "public/**/*"
-    - "coverage/**/*"
-    - "db/schema.rb"
-    - "db/migrate/*.rb"
-    - "bin/**/*"
-    - "config/boot.rb"
-    - "config/environment.rb"
-    - "config/puma.rb"
-    - "sorbet/rbi/gems/**/*"
-    - "sorbet/rbi/dsl.rbi"
-    - "sorbet/rbi/todo.rbi"
-    - ".bundle/**/*"
-  Include:
-    - "sorbet/rbi/shims/**/*.rbi"
-    - "lib/tasks/**/*.rake"
-    - "Rakefile"
-    - "config.ru"
-    - "Gemfile"
-
-# ===== LAYOUT & FORMATTING =====
-Layout/LeadingCommentSpace:
-  AllowRBSInlineAnnotation: true
-
-Layout/LineLength:
-  Enabled: true
-  Max: 120
-  AllowedPatterns:
-    - '\A\s*#:' # Sorbet signatures
-    - '^\s*# typed:'
-    - '^\s*# frozen_string_literal:'
-  Exclude:
-    - "config/routes.rb"
-    - "db/migrate/*.rb"
-
-Layout/MultilineMethodCallIndentation:
-  EnforcedStyle: indented
-
-Layout/ArgumentAlignment:
-  EnforcedStyle: with_fixed_indentation
-
-Layout/ParameterAlignment:
-  EnforcedStyle: with_fixed_indentation
-
-Layout/FirstHashElementIndentation:
-  EnforcedStyle: consistent
-
-Layout/FirstArrayElementIndentation:
-  EnforcedStyle: consistent
-
-# ===== NAMING =====
-Naming/InclusiveLanguage:
-  Exclude:
-    - "lib/tapioca/dsl/compilers/protobuf.rb"
-
-Naming/MethodParameterName:
-  AllowedNames:
-    - io
-    - id
-    - to
-    - by
-    - on
-    - in
-    - at
-    - ip
-    - db
-    - os
-
-Naming/VariableNumber:
-  CheckMethodNames: false
-  CheckSymbols: false
-
-# ===== RAILS =====
-Rails:
-  Enabled: true
-
-Rails/ApplicationController:
-  Enabled: true
-
-Rails/ApplicationRecord:
-  Enabled: true
-
-Rails/UnknownEnv:
-  Environments:
-    - production
-    - development
-    - test
-    - staging
-
-Rails/FilePath:
-  Enabled: false
-
-Rails/SkipsModelValidations:
-  Enabled: false
-
-Rails/Output:
-  Exclude:
-    - "db/seeds.rb"
-    - "lib/tasks/**/*.rake"
-
-Rails/Exit:
-  Exclude:
-    - "lib/tasks/**/*.rake"
-
-Rails/CreateTableWithTimestamps:
-  Enabled: true
-
-Rails/ReversibleMigration:
-  Enabled: true
-
-Rails/BulkChangeTable:
-  Enabled: true
-
-Rails/UniqueValidationWithoutIndex:
-  Enabled: true
-
-# ===== RSPEC =====
-RSpec/BeforeAfterAll:
-  Enabled: true
-
-RSpec/ExampleLength:
-  Enabled: true
-  Max: 20
-  CountAsOne: ["array", "hash", "heredoc", "method_call"]
-
-RSpec/LeadingSubject:
-  Enabled: true
-
-RSpec/NoExpectationExample:
-  Enabled: true
-
-RSpec/MultipleMemoizedHelpers:
-  Max: 15
-
-RSpec/NestedGroups:
-  Max: 5
-
-RSpec/ContextWording:
-  Enabled: true
-  Prefixes:
-    - quando
-    - retorna
-    - when
-    - with
-    - without
-    - if
-    - unless
-    - for
-    - and
-
-RSpec/DescribeClass:
-  Enabled: true
-  IgnoredMetadata:
-    - type: feature
-    - type: request
-    - type: system
-    - type: routing
-    - type: view
-    - type: helper
-    - type: mailer
-    - type: job
-
-RSpec/VariableName:
-  EnforcedStyle: snake_case
-
-RSpec/MessageChain:
-  Enabled: false
-
-RSpec/SubjectStub:
-  Enabled: false
-
-RSpecRails/AvoidSetupHook:
-  Enabled: true
-
-RSpecRails/HttpStatus:
-  Enabled: true
-  EnforcedStyle: symbolic
-
-RSpecRails/InferredSpecType:
-  Enabled: true
-
-# ===== SORBET =====
-Sorbet:
-  Enabled: true
-
-Sorbet/ConstantsFromStrings:
-  Enabled: true
-
-Sorbet/FalseSigil:
-  Enabled: true
-  SuggestedStrictness: true
-
-Sorbet/TrueSigil:
-  Enabled: true
-  Include:
-    - "**/*.rb"
-    - "**/*.rake"
-  Exclude:
-    - "lib/ruby_lsp/tapioca/server_addon.rb"
-    - "spec/dummy/**/*.rb"
-    - "config/initializers/**/*.rb"
-    - "config/environments/**/*.rb"
-    - "db/seeds.rb"
-
-Sorbet/ForbidIncludeConstLiteral:
-  Enabled: true
-
-Sorbet/SignatureBuildOrder:
-  Enabled: true
-
-Sorbet/StrictSigil:
-  Enabled: false
-
-Sorbet/HasSigil:
-  Enabled: true
-  SuggestedStrictness: strict
-  MinimumStrictness: ignore
-  Include:
-    - "app/**/*.rb"
-    - "lib/**/*.rb"
-  Exclude:
-    - "config/**/*.rb"
-    - "db/**/*.rb"
-    - "spec/**/*.rb"
-
-Sorbet/CheckedTrueInSignature:
-  Enabled: true
-
-Sorbet/KeywordArgumentOrdering:
-  Enabled: true
-
-Sorbet/ObsoleteStrictMemoization:
-  Enabled: true
-
-Sorbet/RedundantExtendTSig:
-  Enabled: false
-
-Sorbet/ValidSigil:
-  Enabled: true
-
-# ===== PERFORMANCE =====
-Performance/ChainArrayAllocation:
-  Enabled: true
-
-Performance/CollectionLiteralInLoop:
-  Enabled: true
-
-Performance/StringInclude:
-  Enabled: true
-
-Performance/MapCompact:
-  Enabled: true
-
-Performance/SelectMap:
-  Enabled: true
-
-Performance/RedundantEqualityComparisonBlock:
-  Enabled: true
-
-Performance/Sum:
-  Enabled: true
-
-# ===== FACTORY BOT =====
-FactoryBot/AttributeDefinedStatically:
-  Enabled: true
-
-FactoryBot/CreateList:
-  Enabled: true
-
-FactoryBot/ConsistentParenthesesStyle:
-  Enabled: true
-
-FactoryBot/FactoryClassName:
-  Enabled: true
-
-FactoryBot/SyntaxMethods:
-  Enabled: true
-
-# ===== CAPYBARA =====
-Capybara/ClickLinkOrButtonStyle:
-  Enabled: true
-
-Capybara/NegationMatcher:
-  Enabled: true
-
-Capybara/SpecificMatcher:
-  Enabled: true
-
-Capybara/CurrentPathExpectation:
-  Enabled: true
-
-Capybara/VisibilityMatcher:
-  Enabled: true
-
-# ===== STYLE =====
-Style/CaseEquality:
-  Enabled: true
-
-Style/ClassAndModuleChildren:
-  Exclude:
-    - "spec/tapioca/**/*"
-    - "config/routes.rb"
-    - "app/controllers/concerns/**/*"
-    - "app/models/concerns/**/*"
-
-Style/Documentation:
-  Enabled: false
-
-Style/FrozenStringLiteralComment:
-  Enabled: true
-  EnforcedStyle: always
-  Exclude:
-    - "db/migrate/**/*.rb"
-
-Style/GuardClause:
-  MinBodyLength: 2
-
-Style/StringLiterals:
-  EnforcedStyle: single_quotes
-  ConsistentQuotesInMultiline: true
-
-Style/StringLiteralsInInterpolation:
-  EnforcedStyle: single_quotes
-
-Style/TrailingCommaInArguments:
-  EnforcedStyleForMultiline: comma
-
-Style/TrailingCommaInArrayLiteral:
-  EnforcedStyleForMultiline: comma
-
-Style/TrailingCommaInHashLiteral:
-  EnforcedStyleForMultiline: comma
-
-Style/Lambda:
-  EnforcedStyle: literal
-
-Style/HashSyntax:
-  EnforcedStyle: ruby19_no_mixed_keys
-
-Style/SymbolArray:
-  EnforcedStyle: brackets
-
-Style/WordArray:
-  EnforcedStyle: brackets
-
-Style/EmptyMethod:
-  EnforcedStyle: expanded
-
-Style/NumericLiterals:
-  MinDigits: 6
-
-# ===== METRICS =====
-Metrics/AbcSize:
-  Max: 25
-  CountRepeatedAttributes: false
-
-Metrics/MethodLength:
-  Max: 20
-  CountAsOne: ["array", "hash", "heredoc", "method_call"]
-  Exclude:
-    - "db/migrate/*.rb"
-    - "config/routes.rb"
-
-Metrics/ClassLength:
-  Max: 200
-  CountAsOne: ["array", "hash", "heredoc", "method_call"]
-  Exclude:
-    - "spec/**/*"
-
-Metrics/ModuleLength:
-  Max: 200
-  CountAsOne: ["array", "hash", "heredoc", "method_call"]
-  Exclude:
-    - "spec/**/*"
-
-Metrics/BlockLength:
-  Max: 30
-  CountAsOne: ["array", "hash", "heredoc", "method_call"]
-  AllowedMethods:
-    - describe
-    - context
-    - feature
-    - scenario
-    - let
-    - let!
-    - subject
-    - it
-    - before
-    - after
-    - around
-    - define
-    - guard
-    - lambda
-    - proc
-    - class_eval
-    - module_eval
-    - instance_eval
-  Exclude:
-    - "spec/**/*"
-    - "config/routes.rb"
-    - "config/environments/*.rb"
-    - "db/seeds.rb"
-    - "lib/tasks/**/*.rake"
-
-Metrics/CyclomaticComplexity:
-  Max: 10
-
-Metrics/PerceivedComplexity:
-  Max: 10
-
-Metrics/ParameterLists:
-  Max: 6
-  CountKeywordArgs: false
-
-# ===== LINT =====
-Lint/AmbiguousBlockAssociation:
-  Exclude:
-    - "spec/**/*"
-
-Lint/AssignmentInCondition:
-  AllowSafeAssignment: true
-
-Lint/BooleanSymbol:
-  Enabled: true
-
-Lint/MissingSuper:
-  Exclude:
-    - "app/controllers/**/*"
-    - "app/models/**/*"
-    - "app/jobs/**/*"
-
-# ===== BUNDLER =====
-Bundler/OrderedGems:
-  Enabled: true
-
-# ===== SECURITY =====
-Security/Open:
-  Enabled: true
-
-Security/YAMLLoad:
-  Enabled: true
-
-Security/Eval:
-  Enabled: true
