--- a/sorbet/config
+++ b/sorbet/config
@@ -1,16 +1,4 @@
---dir=.
-
---ignore=vendor/
+--dir
+.
 --ignore=tmp/
---ignore=log/
---ignore=public/
---ignore=node_modules/
---ignore=coverage/
---ignore=db/migrate/
---ignore=bin/
-
---allowed-extension=.rb
---allowed-extension=.rbi
---allowed-extension=.rake
-
---enable-experimental-requires-ancestor
+--ignore=vendor/
