--- a/sorbet/tapioca/config.yml
+++ b/sorbet/tapioca/config.yml
@@ -1,51 +1,13 @@
----
-require:
-  postrequire: sorbet/tapioca/require.rb
-todo:
-  todo_file: sorbet/rbi/todo.rbi
-  file_header: true
-dsl:
-  outdir: sorbet/rbi/dsl
-  file_header: true
-  only: []
-  exclude: []
-  quiet: false
-  workers: 8
-  rbi_max_line_length: 120
-  environment: development
-  list_compilers: false
-  app_root: "."
-  halt_upon_load_error: true
-  skip_constant: []
-  compiler_options: {}
 gem:
-  outdir: sorbet/rbi/gems
-  file_header: true
-  postrequire: sorbet/tapioca/require.rb
-  exclude: []
-  include_dependencies: false
-  typed_overrides:
-    activesupport: "true"
-  doc: true
-  loc: true
-  exported_gem_rbis: true
-  workers: 8
-  auto_strictness: true
-  dsl_dir: sorbet/rbi/dsl
-  rbi_max_line_length: 120
-  environment: development
-  halt_upon_load_error: true
-check_shims:
-  gem_rbi_dir: sorbet/rbi/gems
-  dsl_rbi_dir: sorbet/rbi/dsl
-  shim_rbi_dir: sorbet/rbi/shims
-  annotations_rbi_dir: sorbet/rbi/annotations
-  todo_rbi_file: sorbet/rbi/todo.rbi
-  payload: true
-  workers: 8
-annotations:
-  sources:
-    - https://raw.githubusercontent.com/Shopify/rbi-central/main
-  netrc: true
-  netrc_file: ""
-  typed_overrides: {}
+  # Add your `gem` command parameters here:
+  #
+  # exclude:
+  # - gem_name
+  # doc: true
+  # workers: 5
+dsl:
+  # Add your `dsl` command parameters here:
+  #
+  # exclude:
+  # - SomeGeneratorName
+  # workers: 5
